==> aniline/rf24-esp8266/user/RF24.c <==
#include "ets_sys.h"
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"
#include "gpio.h"
#include "driver/spi.h"
#include "driver/spi_register.h"
#define HIGH 1
#define LOW 0
#define delay(x) ets_delay_us((x) * 1000)
#define delayMicroseconds ets_delay_us
#define min(a, b) ((a) > (b) ? (b) : (a))

uint8_t ICACHE_FLASH_ATTR
rf24_read_register(uint8_t reg)
{

  csn(LOW);
  SPI_transfer( R_REGISTER | ( REGISTER_MASK & reg ) );
  uint8_t result = SPI_transfer(0xff);
  csn(HIGH);

  return result;
}

uint8_t ICACHE_FLASH_ATTR
rf24_write_register(uint8_t reg, uint8_t value)
{
  uint8_t status;

  csn(LOW);
  status = SPI_transfer( W_REGISTER | ( REGISTER_MASK & reg ) );
  SPI_transfer(value);
  csn(HIGH);

  return status;
}

uint8_t ICACHE_FLASH_ATTR
rf24_write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
  uint8_t status;
  const uint8_t* current = (const uint8_t*)(buf);

  if(data_len > 32) data_len = 32;
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : 32 - data_len;

  csn(LOW);
  status = SPI_transfer( writeType );
  while ( data_len-- ) {
    SPI_transfer(*current++);
  }
  while ( blank_len-- ) {
    SPI_transfer(0);
  }
  csn(HIGH);

  return status;
}

uint8_t ICACHE_FLASH_ATTR
rf24_read_payload(void* buf, uint8_t data_len)
{
  uint8_t status;
  uint8_t* current = (uint8_t*)(buf);

  if(data_len > payload_size) data_len = payload_size;
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : 32 - data_len;

	//printf("[Reading %u bytes %u blanks]",data_len,blank_len);

  csn(LOW);
  status = SPI_transfer( R_RX_PAYLOAD );
  while ( data_len-- ) {
    *current++ = SPI_transfer(0xFF);
  }
  while ( blank_len-- ) {
    SPI_transfer(0xff);
  }
  csn(HIGH);

  return status;
}

uint8_t ICACHE_FLASH_ATTR
rf24_spiTrans(uint8_t cmd){

  uint8_t status;

  csn(LOW);
  status = SPI_transfer( cmd );
  csn(HIGH);

  return status;

}

void ICACHE_FLASH_ATTR
rf24_begin(void)
{
  SPI_begin();
  gpio_init ();
	// Initialize pins
  /* TODO: Have to move this out */
  PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO4_U, FUNC_GPIO4);
  PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO5_U, FUNC_GPIO5);
  gpio_output_set(BIT5, BIT4, BIT4 | BIT5, 0);

  ce(LOW);
  csn(HIGH);

	// Must allow the radio time to settle else configuration bits will not necessarily stick.
	// This is actually only required following power up but some settling time also appears to
	// be required after resets too. For full coverage, we'll always assume the worst.
	// Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
	// Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
	// WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
  delay( 5 ) ;

	// Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
	// WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
	// sizes must never be used. See documentation for a more complete explanation.
  rf24_setRetries(5,15);

	// Reset value is MAX
	//setPALevel( RF24_PA_MAX ) ;

	// Determine if this is a p or non-p RF24 module and then
	// reset our data rate back to default value. This works
	// because a non-P variant won't allow the data rate to
	// be set to 250Kbps.
  if( rf24_setDataRate( RF24_250KBPS ) )
  {
    p_variant = true ;
  }

	// Then set the data rate to the slowest (and most reliable) speed supported by all
	// hardware.
  rf24_setDataRate( RF24_1MBPS ) ;

	// Initialize CRC and request 2-byte (16bit) CRC
  rf24_setCRCLength( RF24_CRC_16 ) ;

	// Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
	//rf24_write_register(DYNPD,0);

	// Reset current status
	// Notice reset and flush is the last thing we do
  rf24_write_register(STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

	// Set up default configuration.  Callers can always change it later.
	// This channel should be universally safe and not bleed over into adjacent
	// spectrum.
  rf24_setChannel(76);

	// Flush buffers
  flush_rx();
  flush_tx();

  rf24_powerUp();	//Power up by default when begin() is called

	// Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from rf24_powerUp )
	// PTX should use only 22uA of power
  rf24_write_register(CONFIG, ( rf24_read_register(CONFIG) ) & ~_BV(PRIM_RX) );

}

void ICACHE_FLASH_ATTR
rf24_startListening(void)
{
  rf24_powerUp();
  rf24_write_register(CONFIG, rf24_read_register(CONFIG) | _BV(PRIM_RX));
  rf24_write_register(STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

	// Restore the pipe0 adddress, if exists
  if (pipe0_reading_address[0] > 0){
    rf24_write_register_v(RX_ADDR_P0, pipe0_reading_address, addr_width);
  }

	// Flush buffers
	//flush_rx();
  flush_tx();

	// Go!
  ce(HIGH);

}

void ICACHE_FLASH_ATTR
rf24_stopListening(void)
{

  ce(LOW);
  #if defined(__arm__)
  delayMicroseconds(130);
  #endif
  flush_tx();
	//flush_rx();

  rf24_write_register(CONFIG, ( rf24_read_register(CONFIG) ) & ~_BV(PRIM_RX) );
  delayMicroseconds(130);	//Found that adding this delay back actually increases response time
}

void ICACHE_FLASH_ATTR
rf24_startWrite( const void* buf, uint8_t len, const bool multicast ){

	// Send the payload

	//write_payload( buf, len );
  rf24_write_payload( buf, len,multicast? W_TX_PAYLOAD_NO_ACK : W_TX_PAYLOAD ) ;
  ce(HIGH);
  #if defined(CORE_TEENSY) || !defined(ARDUINO)
	delayMicroseconds(10);
  #endif
  ce(LOW);


}

uint8_t ICACHE_FLASH_ATTR
rf24_getDynamicPayloadSize(void)
{
  uint8_t result = 0;

  csn(LOW);
  SPI_transfer( R_RX_PL_WID );
  result = SPI_transfer(0xff);
  csn(HIGH);

  if(result > 32) { flush_rx(); return 0; }
  return result;
}

void ICACHE_FLASH_ATTR
rf24_toggle_features(void)
{
  csn(LOW);
  SPI_transfer( ACTIVATE );
  SPI_transfer( 0x73 );
  csn(HIGH);
}

void ICACHE_FLASH_ATTR
rf24_writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
     const uint8_t* current = (const uint8_t*)(buf);

  uint8_t data_len = min(len,32);

  csn(LOW);
  SPI_transfer(W_ACK_PAYLOAD | ( pipe & 0B111 ) );

  while ( data_len-- )
    SPI_transfer(*current++);

  csn(HIGH);
}
